<resources>
    <string name="app_name">BloodBuddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="login_as_admin">Login as Admin</string>
    <string name="enter_number">Enter number</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="number">Number</string>
    <string name="otp_page_enter_code">Enter code</string>
    <string name="otp_page_text">We texted on your phone number. Please enter the code to sign in.</string>
    <string name="otp_page_sign_in">Sign in</string>
    <string name="sign_up_verification_text">Verify phone number</string>
    <string name="sign_up_verification_msg1">We just sent a code</string>
    <string name="sign_up_verification_msg2">Choosing Next means that you agree to the Privacy Statement</string>
    <string name="sign_up_phone_next">Next</string>
    <string name="enter_password">Enter Password</string>
    <string name="id">Enter ID</string>
    <string name="profile_page_dob">Enter DOB</string>
    <string name="profile_page_name">Name</string>

    <string name="work_address">Work Address</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYXl1c2h3YW50IiwiYSI6ImNrdW4wb3h6NzBvb20ydXRodzF5ZTBtd3oifQ.mWaUlR6sMzWE_-QpaHiwAA</string>

    <string name="address">Address</string>
    <string name="blood_group">Blood Group</string>
    <string name="update_changes">Update Changes</string>
    <string name="user_profile">User Profile</string>
    <string name="raise_request">Raise Request</string>
    <string name="blood_requests">Blood Requests</string>
    <string name="age">Age</string>
    <string name="amount">Amount</string>
    <string name="location">Location</string>
    <string name="condition">Condition</string>
    <string name="document">Document</string>
    <string name="mark_as_genuine">Mark as Genuine</string>
    <string name="delete_request">Delete Request</string>
    <string name="my_request">My Request</string>
    <string name="cool_down">Cool down</string>
    <string name="seekers">Seekers</string>
    <string name="registered_requests">Registered Requests</string>
    <string name="donors">Donors</string>
    <string name="status">Status:</string>
    <string name="blood_required">Blood Group Required</string>
    <string name="history">History</string>
    <string name="donate">Donate</string>
    <string name="ask_to_donate">Ask to donate</string>
    <string name="searched_list">Searched List</string>
    <string name="notify">Notify</string>
    <string name="push_notification">Push Notification</string>
    <string name="update_feed">Update Feed</string>
    <string name="upload_image">Upload Image</string>

    <string-array name="blood_grps">
        <item>O +ve</item>
        <item>A +ve</item>
        <item>B +ve</item>
        <item>AB +ve</item>
        <item>O -ve</item>
    </string-array>

    <string-array name="condition">
        <item>Severe</item>
        <item>Moderate</item>
        <item>Mild</item>
    </string-array>

</resources>