<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OTPActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_marginTop="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:paddingLeft="20sp"
        android:text="@string/otp_page_enter_code" />

    <TextView
        android:id="@+id/textView6"
        android:layout_marginTop="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:text="@string/otp_page_text" />
    <TextView
        android:id="@+id/error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:textColor="@color/design_default_color_error"
        android:text="....."
        android:visibility="invisible"
        />

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:textSize="15sp"
        android:hint="@string/otp_page_enter_code"
        android:inputType="numberPassword" />



    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_marginTop="60sp"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:text="@string/otp_page_sign_in"
        android:layout_height="30dp"
        android:padding="3dp"
        android:textSize="10dp"
        android:textColor="@color/design_default_color_surface" />

</LinearLayout>